Formatting on readme??

--- a/Project1Start.Rmd
+++ b/Project1Start.Rmd
@@ -9,13 +9,13 @@ date: "10/1/2021"
 This project contains a vignette that contacts the Pokemon API that I have chosen and return well-formatted, parsed data. This vignette will be found in PokemonVignette.md. It contains the following components:
 
   1. A list of all required packages
-  2. Functions that contact the Pokemon API and return well-formatted, parsed data.
-    * There are six spots where a user may customize the returned data.
-    * Inputs are flexible and easy to specify, allowing for column customization when appropriate.
-  3. A basic exploratory data analysis that:
-    * Takes from multiple endpoints.
-    * Creates new variables from existing variables in the dataset.
-    * Contains contingency tables.
-    * Contains numerical summaries at each setting of at least one categorical variable.
-    * Contains at least five well-formatted plots, including each of a bar plot, histogram, box plot, and scatter plot.
+  2. Functions that contact the Pokemon API and return well-formatted, parsed data.  
+    - There are six spots where a user may customize the returned data.  
+    - Inputs are flexible and easy to specify, allowing for column customization when appropriate.  
+  3. A basic exploratory data analysis that:  
+    - Takes from multiple endpoints.  
+    - Creates new variables from existing variables in the dataset.  
+    - Contains contingency tables.  
+    - Contains numerical summaries at each setting of at least one categorical variable.  
+     Contains at least five well-formatted plots, including each of a bar plot, histogram, box plot, and scatter plot.  
   4. All relevant code chunks, in particular the functions used to call the API and the commands used to obtain the data.
