Literally forgot one character

--- a/Project1Start.Rmd
+++ b/Project1Start.Rmd
@@ -17,5 +17,5 @@ This project contains a vignette that contacts the Pokemon API that I have chose
     - Creates new variables from existing variables in the dataset.  
     - Contains contingency tables.  
     - Contains numerical summaries at each setting of at least one categorical variable.  
-     Contains at least five well-formatted plots, including each of a bar plot, histogram, box plot, and scatter plot.  
+    - Contains at least five well-formatted plots, including each of a bar plot, histogram, box plot, and scatter plot.  
   4. All relevant code chunks, in particular the functions used to call the API and the commands used to obtain the data.
